--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div>
   <h1>Quotes App</h1>
+  <hr>
   <h3>Create your own saying...</h3>
 
   <ol>
     <li *ngFor='let quote of quotes'>
-      {{quote}}
+      {{quote.saying}}
     </li>
   </ol>
  
