Add Ngif Directive logic when quotes exceed 7.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
       {{quote.saying}}
     </li>
   </ol>
+  <p *ngIf='quotes.length > 7'>Quite witty! Ever considered writing poetry?</p>
  
 </div>
