--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<div>
-  <h1>Quotes App</h1>
-  <hr>
-  <h3>Create your own saying...</h3>
-
-  <ol>
-    <li *ngFor='let quote of quotes'>
-      {{quote.saying}}
-    </li>
-  </ol>
-  <p *ngIf='quotes.length > 7'>Quite witty! Ever considered writing poetry?</p>
- 
-</div>
+<app-quote></app-quote>
