Add Date Piper.

--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,4 @@
 <p>
-    {{quote.personSubmitting}}
+    Posted by: {{quote.personSubmitting}}
+    <button (click)='quotePosting(true)'>Posted on</button>
 </p>
