--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,16 +1,16 @@
-<div>
+<!-- <div> -->
     <h1>Quotes App</h1>
     <hr>
     <h3>Create your own saying...</h3>
-  
+
     <ol>
-      <li *ngFor='let quote of quotes; let i=index'>
-        {{quote.saying}}
-        <button (click)='toggleDetails(i)'>Toggle Details</button>
-         <app-quote-detail *ngIf='quote.showDescription' [quote]='quote'></app-quote-detail>
-    
-      </li>
+        <div *ngFor='let quote of quotes; let i=index'>
+            <li>{{quote.saying}} due on {{quote.postingDate|date|uppercase}}</li>
+            
+            <button (click)='toggleDetails(i)'>Toggle Details</button>
+            <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isPostedOn)='postQuote($event,i)'></app-quote-detail>
+        </div>
     </ol>
     <p *ngIf='quotes.length > 7'>Quite witty! Ever considered writing poetry?</p>
-   
-  </div>
+
+<!-- </div> -->
