--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,3 +1,3 @@
 <p>Posted by: {{quote.personSubmitting}}</p>
     <p>Posted {{quote.postingDate|dateCount}} days ago.</p>
-    <button (click)='quotePosting(true)'>Delete Quote</button>
+    <button (click)='quotePosting(true)' class="btn btn-outline-danger">Delete Quote</button>
