--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,21 +1,23 @@
 <div class="container">
     <h1>Quotes App</h1>
     <hr>
-    <div class="rown">
+    <div class="row">
         <div class="col-md-6">
-        <h3>Create your own saying...</h3>
+            <h3>Create your own saying...</h3>
 
-        <ol>
-            <div *ngFor='let quote of quotes; let i=index'>
-                <li>{{quote.saying}} due on {{quote.postingDate|date|uppercase}}</li>
+            <ol>
+                <div *ngFor='let quote of quotes; let i=index'>
+                    <li>{{quote.saying}} due on {{quote.postingDate|date|uppercase}}</li>
 
-                <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
-                <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isPostedOn)='postQuote($event,i)'>
-                </app-quote-detail>
-            </div>
-        </ol>
+                    <button (click)='toggleDetails(i)' class="btn btn-primary">Toggle Details</button>
+                    <app-quote-detail *ngIf='quote.showDescription' [quote]='quote' (isPostedOn)='postQuote($event,i)'>
+                    </app-quote-detail>
+                </div>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <app-quote-form></app-quote-form>
+        </div>
     </div>
+    <p *ngIf='quotes.length > 7'>Quite witty! Ever considered writing poetry?</p>
 </div>
-        <p *ngIf='quotes.length > 7'>Quite witty! Ever considered writing poetry?</p>
-
-    </div>
