--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,4 @@
-<p>Posted by: {{quote.personSubmitting}}</p>
-<p>Author: {{quote.author}}</p>
+<p id="postedOnParagraph">Posted by: {{quote.personSubmitting}}
+<br>Author: {{quote.author}}</p>
     <p>Posted {{quote.postingDate|dateCount}} days ago.</p>
     <button (click)='quotePosting(true)' class="btn btn-outline-danger">Delete Quote</button>
